--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -353,7 +353,7 @@
 	      	},
 
 			goToEditor: function() {
-				this.fire('rt-changed', {route:'/dashboard/editor/'+this.strategyId});
+				this.fire('rt-changed', {route:'/research/editor/'+this.strategyId});
 			},
 
 			isBacktestCountOdd: function(backtests) {
@@ -382,8 +382,8 @@
 				this.strategyName = strategy.name;
 
 				var currentPath = JSON.parse(JSON.stringify(this.currentPath));
-				currentPath.push({text:"All Strategies", route:"/dashboard/editor"});
-				currentPath.push({text: this.strategyName, route:"/dashboard/editor/"+this.strategyId});
+				currentPath.push({text:"All Strategies", route:"/research/editor"});
+				currentPath.push({text: this.strategyName, route:"/research/editor/"+this.strategyId});
 				currentPath.push({text:"All Backtests"});
 				
 				this.currentPath = [];
@@ -473,7 +473,7 @@
 	        	}
 
 	        	if(this.backtests.length == 0) {
-	        		this.fire('rt-changed', {route:'/dashboard/editor'});
+	        		this.fire('rt-changed', {route:'/research/editor'});
 	        	}
 	        },
 
@@ -487,7 +487,7 @@
 
 	        onDetail: function(e) {
 	        	e.stopPropagation();
-	        	this.fire('rt-changed', {route:'/dashboard/analyze/' + this.strategyId+'/'+ e.detail.id +'?strategyName='+this.strategyName+'&type=backtest&heading=Backtest '+(e.detail.index + 1)});
+	        	this.fire('rt-changed', {route:'/research/analyze/' + this.strategyId+'/'+ e.detail.id +'?strategyName='+this.strategyName+'&type=backtest&heading=Backtest '+(e.detail.index + 1)});
 	        },
 
 	        onBacktestAdded: function() {
@@ -537,7 +537,7 @@
 
             onForwardStrategyExecutionResponse: function (e) {
                 this.fire('iron-signal', {name:'forwardtest-added'});
-                this.fire('rt-changed', {route:'/dashboard/editor'});
+                this.fire('rt-changed', {route:'/research/editor'});
             },
 
             onForwardStrategyExecutionError: function(e) {
