--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -250,7 +250,7 @@
             },
 
             goToDetail: function () {
-                this.fire('rt-changed', {route: '/dashboard/community/' + this.thread._id});
+                this.fire('rt-changed', {route: '/research/community/' + this.thread._id});
             },
 
             getLastReplyDetails: function (thread) {
