--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -21,13 +21,13 @@
         
         <app-route
             route="{{route}}"
-            pattern="/dashboard/analyze/:strategyId"
+            pattern="/research/analyze/:strategyId"
             data="{{homeData}}">
         </app-route>
 
         <app-route
             route="{{route}}"
-            pattern="/dashboard/analyze/:strategyId/:id"
+            pattern="/research/analyze/:strategyId/:id"
             data="{{detailData}}"
             query-params="{{queryParams}}"
             active="{{detailActive}}">
