--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -19,7 +19,7 @@
 
       <app-location route="{{route}}" use-hash-as-path></app-location>
       <app-route route="{{route}}"
-                pattern="/dashboard/community/:threadId"
+                pattern="/research/community/:threadId"
                 data="{{routeData}}"
                 query-params="{{queryParams}}"
                 active="{{active}}">
