--- a/src/components/analyze/aq-analyze-backtest-detail.html
+++ b/src/components/analyze/aq-analyze-backtest-detail.html
@@ -62,7 +62,7 @@
 
 			goBackAllBacktests: function() {
 				this.fire('unsubscribe-data',{backtestId:this.backtestId});
-				this.fire('rt-changed',{route:'/dashboard/analyze/' + this.strategyId});
+				this.fire('rt-changed',{route:'/research/analyze/' + this.strategyId});
 			},
 
 			attached: function() {
@@ -73,7 +73,7 @@
 			},
 
 			goToEditor: function() {
-				this.fire('rt-changed',{route:'/dashboard/editor/' + this.strategyId});
+				this.fire('rt-changed',{route:'/research/editor/' + this.strategyId});
 			},
 
 		});
